feat: skill manager build, with generic casting getter method.Also added reflection method to register skill instance to manager.
refactor: fixed schedulers to decline memory use, also fixed rotating center of region indicator.

need fixing: saveAll method(I/O) has to be async method.